--- a/Nav.css
+++ b/Nav.css
@@ -1,22 +1,22 @@
-.header{
+.Navbar{
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid whitesmoke;
 }
 
-.header-left {
+.Navbar-left {
     display: flex;
     align-items: center;
 }
 
-.header-left > img {
+.Navbar-left > img {
     object-fit: contain;
     height: 35px;
     margin-left: 5px;
 }
 
-.header-middle {
+.Navbar-middle {
     display: flex;
     align-items: center;
     flex: 0.7;
@@ -26,11 +26,11 @@
     border-radius: 10px;
 }
 
-.header-middle > .MuiSvgIcon-root {
+.Navbar-middle > .MuiSvgIcon-root {
     color: gray;
 }
 
-.header-middle > input {
+.Navbar-middle > input {
     border: none;
     width: 100%;
     padding: 10px;
@@ -39,7 +39,7 @@
     background-color: transparent;
 }
 
-.header-right{
+.Navbar-right{
     display: flex;
     padding-right: 20px;
     align-items: center;
